5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1892_1621.log
== TEST (2019-07-09 18:11:25) 
-- CODE:
from numph import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
for i in range(size(p)):
	if(p[i]=="ARROZ".upper()):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numph import*
ModuleNotFoundError: No module named 'numph'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:11:57) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
for i in range(size(p)):
	if(p[i]=="ARROZ".upper()):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:12:35) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
for i in range(size(p)):
	if(p[i]=="ARROZ".upper):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:13:02) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
for i in range(size(p)):
	if(p[i]=="ARROZ"):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:14:02) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[B]=="ARROZ"):
		a=a+(1.25*q[B])
	B=B+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:14:30) 
-- CODE:
from numpy import*
p=input("digite os produtos: ")
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[B]=="ARROZ"):
		a=a+(1.25*q[B])
	B=B+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:17:01) 
-- CODE:
from numpy import*
p=input("digite os produtos: ")
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[B]=="ARROZ"):
		a=a+(1.25*q[B])
	B=B+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:18:38) 
-- CODE:
from numpy import*
p=array(eval(input("digite os produtos: ")))
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[B]=="ARROZ"):
		a=a+(1.25*q[B])
	B=B+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:19:07) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[B]=="ARROZ"):
		a=a+(1.25*q[B])
	B=B+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:19:40) 
-- CODE:
from numpy import*
p=array(input("digite os produtos: "))
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in range(size(p)):
	if(p[i]=="ARROZ"):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:25:42) 
-- CODE:
from numpy import*
p=input("digite os produtos: ").upper()
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in p:
	if(p[i]=="ARROZ"):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:31:12) 
-- CODE:
from numpy import*
p=input("digite os produtos: ").upper()
q=array(eval(input("digite as quantidades: ")))
a=0
B=0
for i in p:
	if(p[i]=="ARROZ"):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:37:55) 
-- CODE:
from numpy import*
p=input("digite os produtos: ").upper()
q=array(eval(input("digite as quantidades: ")))
a=0
for i in p:
	if(p=="ARROZ"):
		a=a+(1.25*q[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:45:44) 
-- CODE:
from numpy input*
c=input("digite: ").split("")
n=array(eval(input("digite: ")))
a=0
for i in c:
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
File "XXXX", line 1
    from numpy input*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:45:58) 
-- CODE:
from numpy import*
c=input("digite: ").split("")
n=array(eval(input("digite: ")))
a=0
for i in c:
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:46:17) 
-- CODE:
from numpy import*
c=input("digite: ").split("")
n=array(eval(input("digite: ")))
a=0
for i in c:
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:46:43) 
-- CODE:
from numpy import*
c=input("digite: ").split(",")
n=array(eval(input("digite: ")))
a=0
for i in c:
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:47:50) 
-- CODE:
from numpy import*
c=input("digite: ").split(",")
n=array(eval(input("digite: ")))
a=0
for i in range(size(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:49:28) 
-- CODE:
from numpy import*
c=input("digite: ").split(",")
n=array(eval(input("digite: ")))
a=0
for i in range(size(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+(n[i]*1.25)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:56:14) 
-- CODE:
from numpy import*
c=input("digite: ").split(",")
n=array(eval(input("digite: ")))
a=0
for i in range(size(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+n[i]*1.25
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:06:37) 
-- CODE:
from numpy import*
c=input("digite: ").upper()
n=array(eval(input("digite: ")))
a=0
for i in range(len(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+n[i]*1.25
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:08:22) 
-- CODE:
from numpy import*
c=input("digite: ").upper()
n=array(eval(input("digite: ")))
a=0
for i in range(len(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+n[i]*1.25
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:09:34) 
-- CODE:
from numpy import*
c=input("digite: ").upper()
n=array(eval(input("digite: ")))
a=0
for i in range(len(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+n[i]*1.25
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 19:10:58) 
-- CODE:
from numpy import*
c=input("digite: ").upper()
n=array(eval(input("digite: ")))
a=0
for i in range(len(c)):
	if(c[i]=="ARROZ".upper()):
		a=a+n[i]*1.25
print(a)
-- EXECUTION TIME:
0.884043
-- TEST CASE 1:
---- input:
["BIS","MIOJO","FEIJAO","ARROZ"]
[2,1,6,2]
---- correct output:
22.55
---- user output:
digite: digite: 0
-- TEST CASE 2:
---- input:
["BIS","MIOJO","FANTA"]
[2,1,6]
---- correct output:
23.65
---- user output:
digite: digite: 0
-- TEST CASE 3:
---- input:
["FEIJAO","ARROZ","MIOJO"]
[4,6,3]
---- correct output:
20.45
---- user output:
digite: digite: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:30:12) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in (size(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:32:21) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in range(size(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:33:52) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in range(size(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:35:53) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in range(len(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 19:49:03) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in range(len(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 19:54:06) 
-- CODE:
from numpy import*
c=array(eval(input("digite: ")))
q=array(eval(input("digite: ")))
mat=array([1.25,2.6,1.8,0.85,3.2])
s=0
for i in range(len(c)):
	if(c[i]=="ARROZ"):
		s=s+q[i]*mat[0]
	if(c[i]=="FEIJAO"):
		s=s+q[i]*mat[1]
	if(c[i]=="BIS"):
		s=s+q[i]*mat[2]
	if(c[i]=="MIOJO"):
		s=s+q[i]*mat[3]
	if(c[i]=="FANTA"):
		s=s+q[i]*mat[4]
print(round(s,2))
-- EXECUTION TIME:
0.821147
-- TEST CASE 1:
---- input:
["BIS","MIOJO","FEIJAO","ARROZ"]
[2,1,6,2]
---- correct output:
22.55
---- user output:
22.55
-- TEST CASE 2:
---- input:
["BIS","MIOJO","FANTA"]
[2,1,6]
---- correct output:
23.65
---- user output:
23.65
-- TEST CASE 3:
---- input:
["FEIJAO","ARROZ","MIOJO"]
[4,6,3]
---- correct output:
20.45
---- user output:
20.45
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
